--- a/pmb-backoffice/src/index.css
+++ b/pmb-backoffice/src/index.css
@@ -1,12 +1,35 @@
+
 body {
-  margin: 0;
+  background-color: #D5D8DC;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+margin-right: 80%;
+font-size: large;
+color: slategray;
 }
 
+input{
+  background-color: #AED6F1;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+
+select{
+  color: #ffffff;
+  background-color: #212F3D;
+  padding: 8px 16px;
+  border: 1px solid transparent;
+  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+  cursor: pointer;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
